--- a/FORCE_DISP_F90_OPENMP/src/README
+++ b/FORCE_DISP_F90_OPENMP/src/README
@@ -71,9 +71,9 @@ The reflectivity code consist of 2 executables:
 by the appropriate source time function's, and for the chosen mechanism. The 
 output are the seismograms in the time domain in sac format.
 
-In this last version, preprocessing has been removed. axitra now is by default
+In this last version, preprocessing has been removed. axitra now by default
 - run in double precision
-- uses XYZ axes (lo radial, tranverse,...)
+- uses geographical XYZ axes (No radial, tranverse,...)
 - uses harwell routine to compute bessel functions
 
 
@@ -115,15 +115,17 @@ The parameters defined in "axi.data" are:
 - aw=coefficient for frequency imaginary part, omega=(2*pi*freq, aw*pi/tl)
 - xl=medium periodicity (m or km, be consistent with the other variables), if set to <=0, automatically computed
 - ikmax=max number of iteration, generate an error message if overpassed
-- latlon=distance givent in (lat,lon) coordinates (.true.) or in km (.false.)
+- latlon=coordinates given in (lat,lon) (.true.) or in m/km (.false.)
+  when latlon is true, distance unit is set to meter (depth). velocities are in m/s and density in kg/m^3
 - freesurface= free surface is set at Z=0 (.true.) or upper space is infinite (.false.)
 - sourcefile=source description file
 - statfile=receiver description file
 
 (2) in free format and for each layer:
 - thickness (or depth of the upper interface), vp, vs, rho, qp,qs
+  Units are [m, m/s and Kg/m^3], or [km, km/s and Kg/km^3]
   If you specify the upper interface depth, it must be set to 0. for the
-  free surface. rho must be consistent with the length unit (m or km)
+  free surface. !!!! rho unit must be consistent with the length unit (m or km) !!!!
 
 INPUT DESCRIPTION FILES + AXI.HIST
 ==================================
@@ -137,7 +139,7 @@ receiver_index,lat,lon,z
 II) For the sources:
 source_index, x, y, z
  or
-source_index, lat, lon, z
+source_index, lat, lon, z 
 
 III) For the file AXI.HIST
 
