--- a/README
+++ b/README
@@ -7,6 +7,8 @@ Thank you to cite the following paper if you publish results obtained with axitr
 F. Cotton and Coutant O., 1997, Dynamic stress variations due to shear faults in a plane-layered medium, 
 GEOPHYSICAL JOURNAL INTERNATIONAL,Vol 128, 676-688
 
+DOI: 10.5281/zenodo.4603722
+
 TO COMPILE
 ==========
 
