--- a/MOMENT_DISP_F90_OPENMP/README
+++ b/MOMENT_DISP_F90_OPENMP/README
@@ -1,4 +1,4 @@
-Axitra Force & Moment versions 06.08.2020
+Axitra Force & Moment versions 
 
 Should you encounter any problem using the program, please feel free to contact me at:
 Olivier Coutant: olivier.coutant@univ-grenoble-alpes.fr
@@ -71,9 +71,9 @@ The reflectivity code consist of 2 executables:
 by the appropriate source time function's, and for the chosen mechanism. The 
 output are the seismograms in the time domain in sac format.
 
-In this last version, preprocessing has been removed. axitra now is by default
+In this last version, preprocessing has been removed. axitra now by default
 - run in double precision
-- uses XYZ axes (lo radial, tranverse,...)
+- uses geographical XYZ axes (No radial, tranverse,...)
 - uses harwell routine to compute bessel functions
 
 
@@ -87,12 +87,6 @@ axitra is then ready to run. The different data files are:
 (3) input for the convolution program convms
 - axi[.suffix].hist
 
-++++++++++++++++++         ATTENTION       +++++++++++++++++++++++++++++++++
-The sources/receivers are sorted by axitra according to increasing depth.
-The reordering is done both in the receiver description file and in 
-the seismogram file. Check the header (axi.head or axi.res) for the new ordering.
-Same thing for the sources, but it is less crucial since they are indexed.
-++++++++++++++++++         ATTENTION       +++++++++++++++++++++++++++++++++
 
 PARAMETERS (file "parameter.f90")
 ==========
@@ -139,7 +133,7 @@ receiver_index,lat,lon,z
 II) For the sources:
 source_index, x, y, z
  or
-source_index, lat, lon, z (!!! z expected in meter, not in km)
+source_index, lat, lon, z 
 
 III) For the file AXI.HIST
 
