--- a/MOMENT_DISP_F90_OPENMP/EXAMPLE/example.ipynb
+++ b/MOMENT_DISP_F90_OPENMP/EXAMPLE/example.ipynb
@@ -17,6 +17,9 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "import sys\n",
+    "sys.path.append(\"../src\") \n",
+    "\n",
     "import numpy as np\n",
     "from axitra import *\n",
     "import matplotlib.pyplot as pt\n",
