--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+# Numerical Computation of seismograms in 3D plane layered medium
+## Last version May 2024 fixes an amplitude normalization problem introduced few versions ago
+## Results are checked againt theoretical response, see EXAMPLE/check_amplitude.ipynb 
+##
+
 Axitra Force & Moment versions 
 
 Should you encounter any problem using the program, please feel free to contact me at:
